--- a/estilos/style.css
+++ b/estilos/style.css
@@ -5,3 +5,50 @@ Paleta de cores
 - Verde: #49a09d
 - Lilás: #5f2c82
 */
+
+* {
+  font-family: system-ui, '-apple-system', 'BlinkMacSystemFont', 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Open Sans', 'Helvetica Neue', sans-serif;
+  padding: 0px;
+  margin: 0px;
+  box-sizing: border-box;
+}
+
+body, html {
+  background-color: #5f2c82;
+  height: 100vh;
+  width: 100vw;
+}
+
+main {
+  position: relative;
+  height: 100vh;
+  width: 100vw;
+}
+
+section#login {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  overflow: hidden;
+
+  background-color: white;
+  height: 500px;
+  width: 250px;
+  border-radius: 20px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+}
+
+section#login > div#imagem {
+  display: block;
+  background: #5f2c82 url(../imagens/building-pq.jpeg);
+  height: 200px;
+  background-size: cover;
+  background-position: left bottom;
+  background-repeat: no-repeat;
+}
+
+section#login > div#formulario {
+  display: block;
+  padding: 10px;
+}
