--- a/estilos/style.css
+++ b/estilos/style.css
@@ -33,10 +33,13 @@ section#login {
   overflow: hidden;
 
   background-color: white;
-  height: 500px;
   width: 250px;
+  height: 500px;
   border-radius: 20px;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+
+  transition: width 0.3s, height 0.3s;
+  transition-timing-function: ease;
 }
 
 section#login > div#imagem {
