--- a/estilos/style.css
+++ b/estilos/style.css
@@ -29,15 +29,15 @@ section#login {
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
   overflow: hidden;
-
+  
   background-color: white;
   width: 250px;
   height: 500px;
   border-radius: 20px;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
-
+  
+  transform: translate(-50%, -50%);
   transition: width 0.3s, height 0.3s;
   transition-timing-function: ease;
 }
@@ -62,5 +62,80 @@ div#formulario > h1 {
 }
 
 div#formulario > p {
+  font-size: 0.8em;
+}
+
+form > div.campo {
+  background-color: #5f2c82;
+  display: block;
+  width: 100%;
+  height: 40px;
+  border-radius: 8px;
+  margin: 5px 0px;
+}
+
+form > div.campo label {
+  display: none;
+}
+
+div.campo > span {
+  color: white;
+  font-size: 2em;
+  width: 40px;
+  padding: 5px;
+}
+
+div.campo > input {
+  background-color: #94cfcd;
+  font-size: 1em;
+  width: calc(100% - 48px);
+  height: 80%;
+  padding: 4px;
+  border: 0px;
+  border-radius: 4px 8px 8px 4px;
+  transform: translatey(-10px);
+}
+
+div.campo > input:focus {
+  background-color: white;
+  outline: none;
+}
+
+form > input[type=submit] {
+  display: block;
+  font-size: 1em;
+  width: 100%;
+  height: 40px;
+  background-color: #49a09d;
+  color: white;
+  border: none;
+  border-radius: 5px;
+}
+
+form > input[type=submit]:hover {
+  background-color: #2c615f;
+  cursor: pointer;
+}
+
+form > a.botao {
+  display: block;
+  text-align: center;
+  font-size: 1em;
+  width: 100%;
+  height: 40px;
+  padding-top: 7px;
+  margin-top: 5px;
+  background-color: white;
+  color: #2c615f;
+  border: 1px solid #5bc5c2;
+  border-radius: 5px;
+  text-decoration: none;
+}
+
+form > a.botao:hover {
+  background-color: #6cd3cf ;
+}
+
+form > a.botao > span {
   font-size: 0.8em;
 }
